--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,38 @@
-version: '3.8'
-
 services:
-  postgres:
+  db:
     image: postgres:14-alpine
     container_name: awos-postgres
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: ${DB_NAME:-awosdb}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "${DB_PORT:-5432}:5432"
+      - "127.0.0.1:5432:5432"
     volumes:
-      - ./db:/docker-entrypoint-initdb.d
       - postgres_data:/var/lib/postgresql/data
+      - ./db/schema.sql:/docker-entrypoint-initdb.d/1-schema.sql
+      - ./db/seed.sql:/docker-entrypoint-initdb.d/2-seed.sql
+      - ./db/reports_vw.sql:/docker-entrypoint-initdb.d/3-reports_vw.sql
+      - ./db/indexes.sql:/docker-entrypoint-initdb.d/4-indexes.sql
+      - ./db/roles.sql:/docker-entrypoint-initdb.d/5-roles.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - awos-network
-
-  web:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+  app:
+    build: ./frontend
     container_name: awos-web
-    environment:
-      DATABASE_URL: postgresql://${DB_USER:-app_user}:${DB_PASSWORD:-app_password}@postgres:5432/${DB_NAME:-awosdb}
-      NODE_ENV: ${NODE_ENV:-production}
+    restart: always
     ports:
       - "3000:3000"
+    environment:
+      DATABASE_URL: postgresql://${DB_APP_USER}:${DB_APP_PASSWORD}@db:5432/${POSTGRES_DB}
+      NODE_ENV: ${NODE_ENV}
     depends_on:
-      postgres:
+      db:
         condition: service_healthy
-    networks:
-      - awos-network
 
 volumes:
   postgres_data:
-
-networks:
-  awos-network:
-    driver: bridge
