--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,12 @@
-# Use Node 18 LTS
-FROM node:18-alpine
-
+FROM node:20-alpine
 WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm ci --omit=dev
-
-# Copy source
+COPY package.json package-lock.json ./
+RUN npm install
 COPY . .
-
-# Build Next.js
 RUN npm run build
+EXPOSE 3000
+CMD ["npm", "start"]
 
-# Run as non-root
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
 USER nextjs
