--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      DB_APP_USER: ${DB_APP_USER}
+      DB_APP_PASSWORD: ${DB_APP_PASSWORD}
     ports:
       - "5433:5432"
     volumes:
@@ -15,7 +17,9 @@ services:
       - ./db/seed.sql:/docker-entrypoint-initdb.d/2-seed.sql
       - ./db/reports_vw.sql:/docker-entrypoint-initdb.d/3-reports_vw.sql
       - ./db/indexes.sql:/docker-entrypoint-initdb.d/4-indexes.sql
-      - ./db/roles.sql:/docker-entrypoint-initdb.d/5-roles.sql
+      - ./scripts/roles.sh:/docker-entrypoint-initdb.d/5-roles.sh
+      - ./db/roles.sql:/db/roles.sql
+      - ./db/migrate.sql:/docker-entrypoint-initdb.d/6-migrate.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
       interval: 10s
