--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       retries: 5
   app:
     build:
-      context: ./frontend
+      context: ./app
       args:
         DATABASE_URL: postgresql://${DB_APP_USER}:${DB_APP_PASSWORD}@db:5432/${POSTGRES_DB}
         NODE_ENV: ${NODE_ENV:-production}
